WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168646
AudioSampleDataSource should not exclusively lock its read and write threads.
https://bugs.webkit.org/show_bug.cgi?id=168646
Summary
AudioSampleDataSource should not exclusively lock its read and write threads.
Jer Noble
Reported
2017-02-21 00:36:55 PST
AudioSampleDataSource should not exclusively lock its read and write threads.
Attachments
Patch
(5.77 KB, patch)
2017-02-21 00:39 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.76 KB, patch)
2017-02-21 10:13 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.76 KB, patch)
2017-02-21 14:32 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-02-21 00:39:01 PST
Created
attachment 302242
[details]
Patch
Jer Noble
Comment 2
2017-02-21 10:13:48 PST
Created
attachment 302276
[details]
Patch
Jer Noble
Comment 3
2017-02-21 14:32:15 PST
Created
attachment 302309
[details]
Patch
youenn fablet
Comment 4
2017-02-24 08:15:43 PST
Comment on
attachment 302309
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302309&action=review
> Source/WebCore/ChangeLog:11 > + CARingBuffer to safely and simultaneously read and write data.
Makes sense to me. I can't find any unit test checking CARingBuffer behavior in multithreading though. Would it be useful to ensure CARingBuffer and/or AudioSampleDataSource are working as expected though some unit tests?
Jer Noble
Comment 5
2017-02-27 09:07:06 PST
Committed
r213072
: <
http://trac.webkit.org/changeset/213072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug