Source/WebCore/platform/audio/mac/AudioSampleDataSource.h
@@ -29,7 +29,6 @@
 
 #include "AudioSampleBufferList.h"
 #include <CoreAudio/CoreAudioTypes.h>
-#include <wtf/Lock.h>
 #include <wtf/MediaTime.h>
 #include <wtf/RefCounted.h>
 #include <wtf/RefPtr.h>
@@ -94,7 +93,6 @@ protected:
     std::unique_ptr<CARingBuffer> m_ringBuffer;
     size_t m_maximumSampleCount { 0 };
 
-    Lock m_lock;
     float m_volume { 1.0 };
     bool m_muted { false };
     bool m_paused { true };
